# Scribe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: wheels.yml
include/: byte_pair_encoder.hpp  tokenizer.hpp  word_extracter.hpp
python/: bindings.cpp
src/: byte_pair_encoder.cpp  tokenizer.cpp  word_extracter.cpp
test/: testbpe.cpp  testdata.txt  testwordifier.cpp
