[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4"]
build-backend = "scikit_build_core.build"

[project]
name = "Scribe"
version = "0.1.0"
authors = [{name = "DracoRooks"}]
description = "Custom C++20 tokenizer."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.scikit-build]
cmake.version = ">=3.23"
cmake.args = ["-D_BUILD_PY_MOD=ON"]
ninja.make-fallback = true
install.components = ["python_module"]
wheel.packages = []
wheel.install-dir = "."

[tool.scikit-build.cmake.define]
_BUILD_PY_MOD = "ON"

[tool.cibuildwheel]
build-verbosity = 1
skip = ["musllinux", "pp*"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "yum install -y gcc-toolset-13"
environment = { CC = "/opt/rh/gcc-toolset-13/root/usr/bin/gcc", CXX = "/opt/rh/gcc-toolset-13/root/usr/bin/g++"}

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
