[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4"]
build-backend = "scikit_build_core.build"

[project]
name = "Scribe"
version = "0.1.0"
authors = [{name = "DracoRooks"}]
description = "Custom C++20 tokenizer."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.scikit-build]
cmake.version = ">=3.28"
cmake.args = ["-D_BUILD_PY_MOD=ON"]
ninja.make-fallback = true
wheel.packages = []

[tool.scikit-build.cmake.define]
_BUILD_PY_MOD = "ON"

[tool.cibuildwheel]
build-verbosity = 1
skip = ["pp*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
