[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.4", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "PolyScribe"
dynamic = ["version"]
authors = [{name = "DracoRooks"}]
description = "Custom C++20 tokenizer."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.scikit-build]
cmake.version = ">=3.28"
cmake.args = ["-D_BUILD_PY_MOD=ON"]
ninja.make-fallback = true
wheel.packages = []
sdist.include = [
    "CMakeLists.txt",
    "src/*",
    "include/*",
    "python/*"
]

[[tool.dynamic-metadata]]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[tool.scikit-build.cmake.define]
_BUILD_PY_MOD = "ON"

[tool.cibuildwheel]
build-verbosity = 1
skip = ["pp*"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
